2013-11-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_stm32f103.c (usb_interrupt_handler): Change the order of
	calling handler.

2013-11-11  Niibe Yutaka  <gniibe@fsij.org>

	* Version 1.0.

2013-11-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/adc_stm32f103.c (adc_wait_completion): Remove comment about
	spurious interrupt, as we knew that it's because of the bug of
	Chopstx 0.00.

2013-11-08  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.03.

	* src/usb_stm32f103.c (ISTR_OVR): Rename.
	(usb_handle_transfer): Rewrite control transfer handling, so that
	the case where both of CTR_TX, CTR_RX are 1 is handled correctly.

	* src/main.c (neug_setup_endpoints_for_interface): Fix for ENDP2.

2013-11-06  Niibe Yutaka  <gniibe@fsij.org>

	* fraucheky: New submodule.
	* .gitignore: Add generated files by Fraucheky.
	* NEUG_USB_DEVICE_ID: Add USB id of Fraucheky.
	* src/Makefile.in, src/config.h.in, src/configure: Support
	Fraucheky.
	*src/main.c: Likewise.

	* vender/flying-stone-technology: New.

2013-11-05  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: New file.

	* src/configure (SERIALNO, SERIALNO_STR_LEN_DEFINE): New.
	(REVISION): Use the file VERSION if it doesn't have .git.
	* src/config.h.in (SERIALNO_STR_LEN_DEFINE): New.
	* src/main.c (vcom_string3): Removed.
	(ID_OFFSET): New, using SERIALNO_STR_LEN.

2013-11-03  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.01.

2013-11-02  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update.
	* src/sys.c, src/usb_lld.h, src/usb_stm32f103.c: Update from
	Chopstx.
	* src/main.c (usb_cb_get_descriptor): Follow the change.

2013-10-24  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (usb_cb_setup): Signal CND_USB, so that
	neug_upgrade.py works better.

2013-08-22  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.11.

2013-08-21  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.00 release of Chopstx.

2013-08-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (options): Add --enable-sys1-compat.
